--- a/projects/Wiesend.DataTypes/Wiesend.DataTypes.csproj
+++ b/projects/Wiesend.DataTypes/Wiesend.DataTypes.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <!-- Target Fameworks [.NET Standard 2.0], [.NET Framework 4.5] -->
   <PropertyGroup>
@@ -78,7 +78,7 @@
     <Authors>Dominik Wiesend</Authors>
     <Copyright>Copyright(c) 2018 Dominik Wiesend. All rights reserved.</Copyright>
     <SignAssembly>true</SignAssembly>
-    <Version>5.0.2.0</Version>
+    <Version>5.0.1.0</Version>
     <FileVersion>4.0.0.0</FileVersion>
     <AssemblyVersion>4.0.0.0</AssemblyVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -137,11 +137,7 @@
 
   <!-- Nuget packages for [.NET Framework 4.5] -->
   <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
-    <PackageReference Include="CodeContracts.MSBuild" Version="1.12.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="1.3.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="[1.3.1]" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity.Design" />
