--- a/projects/Wiesend.DataTypes/Wiesend.DataTypes.csproj
+++ b/projects/Wiesend.DataTypes/Wiesend.DataTypes.csproj
@@ -14,7 +14,7 @@
   <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
-    <TargetFrameworks>net45;net48;netstandard2.0;netstandard2.1;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net45;net48</TargetFrameworks>
   </PropertyGroup>
 
   <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
@@ -218,14 +218,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
-  
-  <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ - - - » Reference: Include (AssemblyReference)  >>>  [TargetFramework(net6.0/net7.0)]                                                               □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0' OR '$(TargetFramework)' == 'net7.0'">
-  </ItemGroup>
 
   <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
   <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
@@ -238,38 +230,6 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="1.3.2" PrivateAssets="All" />
     <PackageReference Include="System.Collections.Immutable" Version="1.3.0" PrivateAssets="All" />
     <PackageReference Include="System.Reflection.Metadata" Version="1.3.0" PrivateAssets="All" />
-  </ItemGroup>
-
-  <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ - - - » Reference: Include (PackageReference)  >>>  [TargetFramework(netstandard2.0/netstandard2.1)]                                                □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'netstandard2.1'">
-    <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.6.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" PrivateAssets="All" />
-    <PackageReference Include="System.Collections.Immutable" Version="7.0.0" PrivateAssets="All" />
-    <PackageReference Include="System.Reflection.Metadata" Version="7.0.0" PrivateAssets="All" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-  </ItemGroup>
-
-  <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ - - - » Reference: Include (PackageReference)  >>>  [TargetFramework(net6.0/net7.0)]                                                                □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0' OR '$(TargetFramework)' == 'net7.0'">
-    <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.6.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" PrivateAssets="All" />
-    <PackageReference Include="System.Collections.Immutable" Version="7.0.0" PrivateAssets="All" />
-    <PackageReference Include="System.Reflection.Metadata" Version="7.0.0" PrivateAssets="All" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
   <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
