--- a/projects/Wiesend.Media/Wiesend.Media.csproj
+++ b/projects/Wiesend.Media/Wiesend.Media.csproj
@@ -14,7 +14,7 @@
   <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
-    <TargetFrameworks>net45;net48;netstandard2.0;netstandard2.1;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net45;net48</TargetFrameworks>
   </PropertyGroup>
 
   <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
@@ -225,14 +225,6 @@
 
   <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
   <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ - - - » Reference: Include (AssemblyReference)  >>>  [TargetFramework(net6.0/net7.0)]                                                               □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0' OR '$(TargetFramework)' == 'net7.0'">
-  </ItemGroup>
-
-  <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
   <!-- ║ [ItemGroup] □■□ |xx| □■□ - - - » Reference: Include (PackageReference)  >>>  [TargetFramework(net45/net48)]                                                                  □■□ |xx| □■□ [ItemGroup] ║  -->
   <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
   <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
@@ -240,30 +232,6 @@
     <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
     <PackageReference Include="System.Collections.Immutable" Version="1.3.0" PrivateAssets="All" />
     <PackageReference Include="System.Reflection.Metadata" Version="1.3.0" PrivateAssets="All" />
-  </ItemGroup>
-
-  <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ - - - » Reference: Include (PackageReference)  >>>  [TargetFramework(netstandard2.0/netstandard2.1)]                                                □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'netstandard2.1'">
-    <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
-    <PackageReference Include="System.Collections.Immutable" Version="7.0.0" PrivateAssets="All" />
-    <PackageReference Include="System.Reflection.Metadata" Version="7.0.0" PrivateAssets="All" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
-  </ItemGroup>
-
-  <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ - - - » Reference: Include (PackageReference)  >>>  [TargetFramework(net6.0/net7.0)]                                                                □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ║ [ItemGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [ItemGroup] ║  -->
-  <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0' OR '$(TargetFramework)' == 'net7.0'">
-    <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
-    <PackageReference Include="System.Collections.Immutable" Version="7.0.0" PrivateAssets="All" />
-    <PackageReference Include="System.Reflection.Metadata" Version="7.0.0" PrivateAssets="All" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
   </ItemGroup>
 
   <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
