--- a/projects/Wiesend.Configuration/Wiesend.Configuration.csproj
+++ b/projects/Wiesend.Configuration/Wiesend.Configuration.csproj
@@ -48,12 +48,12 @@
   <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
   <PropertyGroup>
     <ProjectBuildType       Condition="'$(ProjectBuildType)'       == ''">Dynamic Link Library</ProjectBuildType>
-    <GitHubRepositoryName   Condition="'$(GitHubRepositoryName)'   == ''">wiesend-dll</GitHubRepositoryName>
-    <GitHubRepositoryRoot   Condition="'$(GitHubRepositoryRoot)'   == ''">https://github.com/DominikWiesend</GitHubRepositoryRoot>
-    <GitHubRepositoryType   Condition="'$(GitHubRepositoryType)'   == ''">GitHub Repository</GitHubRepositoryType>
+    <GitRepositoryName      Condition="'$(GitRepositoryName)'      == ''">wiesend-dll</GitRepositoryName>
+    <GitRepositoryRoot      Condition="'$(GitRepositoryRoot)'      == ''">https://github.com/DominikWiesend</GitRepositoryRoot>
+    <GitRepositoryType      Condition="'$(GitRepositoryType)'      == ''">GitHub Repository</GitRepositoryType>
     <NugetPackageTags       Condition="'$(NugetPackageTags)'       == ''">wiesend;lib;library;dll;configuration</NugetPackageTags>
     <NugetPackageName       Condition="'$(NugetPackageName)'       == ''">Wiesend.Configuration</NugetPackageName>
-    <NugetPackageVersion    Condition="'$(NugetPackageVersion)'    == ''">5.0.3.0</NugetPackageVersion>
+    <NugetPackageVersion    Condition="'$(NugetPackageVersion)'    == ''">5.0.4.0</NugetPackageVersion>
     <NugetPackageExtensions Condition="'$(NugetPackageExtensions)' == ''">.pdb</NugetPackageExtensions>
   </PropertyGroup>
 
@@ -101,8 +101,8 @@
   <!-- ║ [PropertyGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [PropertyGroup] ║  -->
   <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
   <PropertyGroup>
-    <RepositoryType>$(GitHubRepositoryType)</RepositoryType>
-    <RepositoryUrl>$(GitHubRepositoryRoot)/$(GitHubRepositoryName)</RepositoryUrl>
+    <RepositoryType>$(GitRepositoryType)</RepositoryType>
+    <RepositoryUrl>$(GitRepositoryRoot)/$(GitRepositoryName)</RepositoryUrl>
   </PropertyGroup>
 
   <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
@@ -115,7 +115,7 @@
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>$(NugetPackageTags)</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageProjectUrl>$(GitHubRoot)/$(GitHubRepositoryName)/</PackageProjectUrl>
+    <PackageProjectUrl>$(GitRepositoryRoot)/$(GitRepositoryName)/</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Version>$(NugetPackageVersion)</Version>
@@ -212,7 +212,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Numerics" />
