--- a/projects/Wiesend.Validation/Wiesend.Validation.csproj
+++ b/projects/Wiesend.Validation/Wiesend.Validation.csproj
@@ -48,12 +48,12 @@
   <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
   <PropertyGroup>
     <ProjectBuildType       Condition="'$(ProjectBuildType)'       == ''">Dynamic Link Library</ProjectBuildType>
-    <GitHubRepositoryName   Condition="'$(GitHubRepositoryName)'   == ''">wiesend-dll</GitHubRepositoryName>
-    <GitHubRepositoryRoot   Condition="'$(GitHubRepositoryRoot)'   == ''">https://github.com/DominikWiesend</GitHubRepositoryRoot>
-    <GitHubRepositoryType   Condition="'$(GitHubRepositoryType)'   == ''">GitHub Repository</GitHubRepositoryType>
+    <GitRepositoryName      Condition="'$(GitRepositoryName)'      == ''">wiesend-dll</GitRepositoryName>
+    <GitRepositoryRoot      Condition="'$(GitRepositoryRoot)'      == ''">https://github.com/DominikWiesend</GitRepositoryRoot>
+    <GitRepositoryType      Condition="'$(GitRepositoryType)'      == ''">GitHub Repository</GitRepositoryType>
     <NugetPackageTags       Condition="'$(NugetPackageTags)'       == ''">wiesend;lib;library;dll;validation</NugetPackageTags>
     <NugetPackageName       Condition="'$(NugetPackageName)'       == ''">Wiesend.Validation</NugetPackageName>
-    <NugetPackageVersion    Condition="'$(NugetPackageVersion)'    == ''">5.0.3.0</NugetPackageVersion>
+    <NugetPackageVersion    Condition="'$(NugetPackageVersion)'    == ''">5.0.4.0</NugetPackageVersion>
     <NugetPackageExtensions Condition="'$(NugetPackageExtensions)' == ''">.pdb</NugetPackageExtensions>
   </PropertyGroup>
 
@@ -101,8 +101,8 @@
   <!-- ║ [PropertyGroup] □■□ |xx| □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ □■□ |xx| □■□ [PropertyGroup] ║  -->
   <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
   <PropertyGroup>
-    <RepositoryType>$(GitHubRepositoryType)</RepositoryType>
-    <RepositoryUrl>$(GitHubRepositoryRoot)/$(GitHubRepositoryName)</RepositoryUrl>
+    <RepositoryType>$(GitRepositoryType)</RepositoryType>
+    <RepositoryUrl>$(GitRepositoryRoot)/$(GitRepositoryName)</RepositoryUrl>
   </PropertyGroup>
 
   <!-- ╔═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗  -->
@@ -115,7 +115,7 @@
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>$(NugetPackageTags)</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageProjectUrl>$(GitHubRoot)/$(GitHubRepositoryName)/</PackageProjectUrl>
+    <PackageProjectUrl>$(GitRepositoryRoot)/$(GitRepositoryName)/</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Version>$(NugetPackageVersion)</Version>
@@ -227,8 +227,6 @@
   <!-- ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  -->
   <ItemGroup Condition="'$(TargetFramework)' == 'net45' OR '$(TargetFramework)' == 'net48'">
     <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="1.3.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="1.3.2" PrivateAssets="All" />
     <PackageReference Include="System.Collections.Immutable" Version="1.3.0" PrivateAssets="All" />
     <PackageReference Include="System.Reflection.Metadata" Version="1.3.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.3" />
